--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+  <link rel="stylesheet" href="css/main.css" />
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,55 @@
     <title>Document</title>
 </head>
 <body>
+<div class="container">
+  <div class="header flex head1">
+      <p>Startup Matchmaker</p>
+      <nav>
+        <div>
+        <a href="#find">Find Developers</a>
+        <a href="#find">Find Designers</a>
+        <a href="#">How it works</a>
+        <a href="#">Our Team</a>
+        <a href="#">Blog</a>
+      </nav>
+  </div>
+  <hr>
+
+  <div class="header flex head2">
+      <p><b>Because two brains <span style="text-decoration:line-through">tastes</span> <span  style="text-decoration: underline;text-decoration-color: yellow;">are</span> better than one.</b></p>
+  </div>
+    
+  <div class="banner flex">
+    <div class="ban1">
+      <h2>Meet your Match!</h2>
+      <p>Have a great idea for a product, but need help making it a reality? We're here to help.Startup Matchmaker is the best place for designers and developers to find each other.</p> 
+      <button>CREATE A PROFILE</button>
+    </div>   
+  </div>
+
+  <div class="flex select" >
+    <div class="item">
+      <h3>Create a Profile</h3>
+      <p>Are you a Designer? Developer? Put yourself out there so that others can find you!</p>
+      <button>SIGN UP NOW</button>
+    </div>
+    <div class="item">
+      <h3><b>Find a Developer</b></h3>
+      <p>Looking for a fantastic developer to work with on the next big thing? Look no further.</p>
+      <button>START YOUR SEARCH</button>
+    </div>
+    <div class="item">
+      <h3><b>Find a Designer</b></h3>
+      <p>Need someone who can make a product intuisive and appealing? Get ready.</p>
+      <button>START YOUR SEARCH</button>
+    </div>
+  </div>
+  <div class="footer flex">
+    @ 2019 Startup Matchmaker. Made in NY.
+  </div>
+</div>
+
+
     
 </body>
 </html>
