--- a/index.html
+++ b/index.html
@@ -52,11 +52,8 @@
     </div>
   </div>
   <div class="footer flex">
-    @ 2019 Startup Matchmaker. Made in NY.
+<p></p>@ 2019 Startup Matchmaker. Made in NY.</p>
   </div>
 </div>
-
-
-    
 </body>
 </html>
